# sql-teacher

./: Cargo.toml  README.md
data/modules/: 01.toml  02.toml  03.toml  04.toml  06.toml  09.toml
src/: curriculum.rs  gate.rs  main.rs  models.rs  progress.rs  quiz.rs  ui.rs
