[package]
name = "sql_teacher"
version = "1.0.0"
edition = "2021"
description = "A terminal-based SQL teaching application with gated progression"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
colored = "2"
inquire = "0.7"
indicatif = "0.17"
